--- a/jeu/jeu.css
+++ b/jeu/jeu.css
@@ -147,10 +147,15 @@ html, body {
     border: 2px dashed #aaa;
     box-shadow: 0 0 15px #000;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #ccc;
     font-size: 1.2vw;
     font-weight: bold;
     text-align: center;
+  }
+
+  .deplacable {
+    background-color: white;
   }
