--- a/jeu/jeu1.css
+++ b/jeu/jeu1.css
@@ -28,11 +28,12 @@ body {
     font-size: 30px;
 }
 
-img {
+.bateau {
     border-radius: 15px;
     border: 1px solid white;
     padding: 10px;
     background-color: orange;
+    margin-top: 3px;
 }
 
 #noms {
